// Vitest Snapshot v1

exports[`createEndpoint > creates a curl snippet with payload 1`] = `
"curl -X POST \\\\
 https://service.centrapay.com/api/test \\\\
 -H 'content-type: application/json' \\\\
 -H 'x-api-key: <TOKEN>' \\\\
 -d '
{
 \\"foo\\": \\"bar\\",
 \\"bar\\": \\"baz\\"
}
'"
`;

exports[`createEndpoint > creates a curl snippet without headers or payload 1`] = `
"curl -X POST \\\\
 https://service.centrapay.com/api/test"
`;

exports[`createEndpoint > creates a curl snippet without payload 1`] = `
"curl -X POST \\\\
 https://service.centrapay.com/api/test \\\\
 -H 'content-type: application/json' \\\\
 -H 'x-api-key: <TOKEN>'"
`;
